# centauro_ros_nav

./: CMakeLists.txt  README.md  package.xml
centauro_ros_nav/: CMakeLists.txt  package.xml
centauro_ros_nav/behavior_trees/: nav_to_pose.xml
centauro_ros_nav/config/: centauro_nav_params.yaml  general_nav_params.yaml
centauro_ros_nav/include/centauro_ros_nav/: valid_target_selector_manager.hpp
centauro_ros_nav/launch/: bringup_nav_launch.py  centauro_nav.launch.py  nav2_launch.py
centauro_ros_nav/maps/: empty.yaml
centauro_ros_nav/rviz/: nav2.rviz
centauro_ros_nav/src/: valid_target_selector_manager.cpp  valid_target_selector_node.cpp
centauro_ros_nav_srvs/: CMakeLists.txt  package.xml
centauro_ros_nav_srvs/srv/: SendCandidateNavTarget.srv
centuaro_ros_nav_srv/: CMakeLists.txt  package.xml
config/centauro/: .local_costmap_params.yaml.swp  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
launch/: centauro_nav.launch  kyon_nav.launch  mapping_lidar.launch  octomap.launch
maps/: nancy_map_res_0_10.pgm  nancy_map_res_0_25.pgm  nancy_map_res_0_25.yaml  nancy_map_res_0_50.pgm  nancy_map_res_0_50.yaml
maps/backup/: nancy_map_res_0_10.yaml  nancy_map_res_0_25.pgm  nancy_map_res_0_50.pgm
src/: ValidTargetSelectorManager.cpp
